Add styling to app

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div id="flashcard-app" class="container">
 
-    <h3>It's finally time for</h3>
-    <h1> Flashcards</h1>
+    <h3>Flashcards to help you learn more about a </h3>
+    <h1>Vegan lifestyle</h1>
 
     <div class="flashcard-form">
 
